[package]
name = "ssh-keys"
version = "0.1.0"
authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
edition = "2018"
resolver = "2"
publish = false

[dependencies]
anyhow = "1.0"
rusoto_core = "0.46"
rusoto_credential = "0.46"
rusoto_secretsmanager = "0.46"
structopt = "0.3"
serde_json = "1.0"
tokio = { version = "1.6", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
